--- a/YourCourses/Views/Practice/Index.cshtml
+++ b/YourCourses/Views/Practice/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿
+
 @{
     ViewBag.Title = "Пример работы онлайн-компилятора";
 }
+<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
 <script src="~/Scripts/codemirror-2.37/lib/codemirror.js"></script>
 <script src="~/Scripts/codemirror-2.37/mode/clike/clike.js" type="text/javascript"></script>
 <link href="~/Scripts/codemirror-2.37/lib/codemirror.css" rel="stylesheet" type="text/css" />
@@ -9,18 +12,22 @@
 
 <h2>Sample</h2>
 
-@using (Html.BeginForm( "Index", "Practice"))
+@using (Ajax.BeginForm( "Out", new AjaxOptions
 {
-    @Html.TextArea("sampleCode", (string)ViewBag.sampleCode, new {  rows = "20", cols = "120" })
-    <input type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Practice")'"/>
-    
-}
-</br>
-@using (Html.BeginForm())
+    UpdateTargetId = "results",
+    LoadingElementId = "loading",
+}))
 {
-    @Html.TextArea("OutPut", (string)ViewBag.result, new { @class = "form-control", rows = "5", cols = "620" })
-    
+    @Html.TextArea("sampleCode", (string)ViewBag.sampleCode, new { rows = "20", cols = "120" })
+    <input type="submit" class="btn btn-primary"
+           @*onclick="location.href='@Url.Action("OutPut", "Practice")'"*@ />
+        <div id="results"></div>
+        <div id="loading" style="display:none; color:Red; font-weight:bold;">
+            <p>Идет загрузка...</p>
+        </div>
 }
+
+
 
 <script>
 
