--- a/YourCourses/Views/Practice/Index.cshtml
+++ b/YourCourses/Views/Practice/Index.cshtml
@@ -8,7 +8,7 @@
 <script src="~/Scripts/codemirror-2.37/lib/codemirror.js"></script>
 <script src="~/Scripts/codemirror-2.37/mode/clike/clike.js" type="text/javascript"></script>
 <link href="~/Scripts/codemirror-2.37/lib/codemirror.css" rel="stylesheet" type="text/css" />
-<link href="~/Scripts/codemirror-2.37/theme/twilight.css" rel="stylesheet" type="text/css" />
+<link href="~/Scripts/codemirror-2.37/theme/lesser-dark.css" rel="stylesheet" type="text/css" />
 
 <h2>Sample</h2>
 
@@ -18,10 +18,11 @@
     LoadingElementId = "loading",
 }))
 {
-    @Html.TextArea("sampleCode", (string)ViewBag.sampleCode, new { rows = "20", cols = "120" })
-    <input type="submit" class="btn btn-primary"
-           @*onclick="location.href='@Url.Action("OutPut", "Practice")'"*@ />
-        <div id="results"></div>
+    @Html.TextArea("sampleCode", (string)ViewBag.sampleCode, new { rows = "20", cols = "420" })
+    <input type="submit" class="btn btn-primary"/>
+           @*onclick="location.href='@Url.Action("OutPut", "Practice")'"*@ 
+      
+           <div id="results"></div>
         <div id="loading" style="display:none; color:Red; font-weight:bold;">
             <p>Идет загрузка...</p>
         </div>
@@ -34,6 +35,12 @@
     var editor = CodeMirror.fromTextArea(document.getElementById("sampleCode"), {
         lineNumbers: true,
         matchBrackets: true,
-        mode: "text/x-csharp"
+        mode: "text/x-csharp",
+        compiler: true,
+            hint: true,
+            //autohint: true,
+        theme: "lesser-dark"
+        
+       
     });
 </script> 
