--- a/YourCourses/Views/Lectures/Create.cshtml
+++ b/YourCourses/Views/Lectures/Create.cshtml
@@ -1,5 +1,12 @@
 ﻿@model YourCourses.Models.Lecture
 
+@{
+    ViewBag.Title = "Create";
+}
+
+<h2>Create</h2>
+
+
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
@@ -9,11 +16,19 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @ViewBag.courseId
             @Html.LabelFor(model => model.LectureName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.LectureName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.LectureName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.CourseCourseId, "CourseCourseId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model=>model.CourseCourseId, new SelectList(ViewBag.CourseCourseId, "value","text"), htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownList("CourseCourseId", null, htmlAttributes: new { @class = "form-control" })*@
+                @Html.ValidationMessageFor(model => model.CourseCourseId, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -28,3 +43,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
