--- a/YourCourses/Views/Shared/_Layout.cshtml
+++ b/YourCourses/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
                     <li>@Html.ActionLink("Test Practice", "Index", "Practice")</li>
-                    <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Курсы", "Index", "CoursesList")</li>
                     <li>@Html.ActionLink("Admin Page", "InfoAbout", "AdminPage")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
