--- a/YourCourses/Views/CoursesList/Lecture.cshtml
+++ b/YourCourses/Views/CoursesList/Lecture.cshtml
@@ -5,35 +5,39 @@
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/bootstrap.min.js"></script>
 
+<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+<script src="~/Scripts/codemirror-2.37/lib/codemirror.js"></script>
+<script src="~/Scripts/codemirror-2.37/mode/clike/clike.js" type="text/javascript"></script>
+<link href="~/Scripts/codemirror-2.37/lib/codemirror.css" rel="stylesheet" type="text/css" />
+<link href="~/Scripts/codemirror-2.37/theme/lesser-dark.css" rel="stylesheet" type="text/css" />
+
 <p>Lectures</p>
 <label for="">@ViewBag.id</label>
-@Html.ActionLink(" Добавить лекцию ", "Create", "lectures");
+@Html.ActionLink(" Добавить модуль ", "Create", "lectures");
 
-@foreach (var l in Model)
+@*@foreach (var l in Model)
 {
     <br>
     @l.LectureName
-}
-@foreach (var lecture in Model)
-{
-    <div class="panel-group">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a data-toggle="collapse" href="#collapse1">@lecture.LectureName</a>
-                </h4>
-            </div>
-            <div id="collapse1" class="panel-collapse collapse">
-                <ul class="list-group">
-                    <li class="list-group-item">@lecture.LectureName</li>
-                    <li class="list-group-item">@lecture.LectureName</li>
-                    <li class="list-group-item">@lecture.LectureName</li>
-                </ul>
-                @*<div class="panel-footer">@lecture.Course.CourseName</div>*@
-            </div>
+}*@
+
+
+
+
+<br />
+@foreach (var s in Model)
+            {
+    <div style="margin-right:8px;float:left;">
+        <br>
+        @Ajax.ActionLink(s.LectureName, "SublecturesList", new { id = s.LectureId }, new AjaxOptions { UpdateTargetId = "results", LoadingElementId = "loading" })
+        <div id="results"></div>
+        <div id="loading" style="display:none; color:Red; font-weight:bold;">
+            <p>Идет загрузка...</p>
         </div>
     </div>
 }
+
 <style>
     /* Icon when the collapsible content is shown */
     .btn:after {
