--- a/YourCourses/Views/AdminPage/InfoAbout.cshtml
+++ b/YourCourses/Views/AdminPage/InfoAbout.cshtml
@@ -13,6 +13,8 @@
 
 </ol>
 <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-<button type="button" width ="20" onclick="location.href='@Url.Action("Create", "Courses")'" class="btn btn-primary btn-lg btn-block" >Создать курс</button>
+<button type="button" width ="20" onclick="location.href='@Url.Action("Create", "Courses")'" class="btn btn-primary btn-lg btn-block" >Создать интерактивный курс</button>
+<button type="button" width="20" onclick="location.href='@Url.Action("Create", "Quizs")'" class="btn btn-primary btn-lg btn-block">Создать опрос</button>
+
 <button type="button" onclick="location.href='@Url.Action("", "")'" class="btn btn-danger btn-lg btn-block ">Удалить</button>
 
