--- a/YourCourses/Views/CoursesList/Index.cshtml
+++ b/YourCourses/Views/CoursesList/Index.cshtml
@@ -12,7 +12,7 @@
             </div>
             <div class="Details">
                 Описание курса <br>
-                @Course.CourseInfo
+                @Html.Raw(Course.CourseInfo)
             </div>
             <div>
                 <span class="DateTime">
