--- a/YourCourses/Views/Shared/_Layout.cshtml
+++ b/YourCourses/Views/Shared/_Layout.cshtml
@@ -24,8 +24,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
                     <li>@Html.ActionLink("Test Practice", "Index", "Practice")</li>
-                    <li>@Html.ActionLink("Курсы", "Index", "CoursesList")</li>
+                    <li>@Html.ActionLink("Интерактивные курсы", "Index", "CoursesList")</li>
                     <li>@Html.ActionLink("Admin Page", "InfoAbout", "AdminPage")</li>
+                    <li>@Html.ActionLink("Опросы", "Index", "QuizsList")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
 
