--- a/YourCourses/Views/CoursesList/Lecture.cshtml
+++ b/YourCourses/Views/CoursesList/Lecture.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<YourCourses.Models.Lecture>
+﻿
+@model IEnumerable<YourCourses.Models.Lecture>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="~/Content/bootstrap.min.css">
