--- a/YourCourses/Views/SubLectures/Create.cshtml
+++ b/YourCourses/Views/SubLectures/Create.cshtml
@@ -36,7 +36,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.LectureAdminOutput, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.LectureAdminOutput, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.LectureAdminOutput, new { htmlAttributes = new { @class = "form-control", @rows = 20 } })
                 @Html.ValidationMessageFor(model => model.LectureAdminOutput, "", new { @class = "text-danger" })
             </div>
         </div>
