--- a/YourCourses/Views/CoursesList/ShowEditorArea.cshtml
+++ b/YourCourses/Views/CoursesList/ShowEditorArea.cshtml
@@ -4,7 +4,7 @@
 
 
 <div>
-    @Html.TextArea("Name", (string)ViewBag.result, new { @class = "form-control", rows = "5", cols = "420" })
+    @Html.TextArea("Name", (string)ViewBag.result, new { @class = "form-control", @readonly = true, rows = "5", cols = "420" })
 
 </div>
 
