--- a/YourCourses/Views/CoursesList/ShowPractice.cshtml
+++ b/YourCourses/Views/CoursesList/ShowPractice.cshtml
@@ -9,12 +9,15 @@
 <script src="~/Scripts/codemirror-2.37/mode/clike/clike.js" type="text/javascript"></script>
 <link href="~/Scripts/codemirror-2.37/lib/codemirror.css" rel="stylesheet" type="text/css" />
 <link href="~/Scripts/codemirror-2.37/theme/lesser-dark.css" rel="stylesheet" type="text/css" />
-
+@{ var info=@"//Rextester.Program.Main is the entry point for your code. Don't change it.
+//Compiler version 4.0.30319.17929 for Microsoft (R) .NET Framework 4.5";
+};
 @foreach (var item in Model)
 {
-    @Html.Raw(@item.FirstPart);
+    
+    @Html.TextArea("First", item.FirstPart,  new { @class = "form-control", @readonly =true, rows = "15", cols = "200" })
     <br>
-    @Html.Raw(@item.SecondPart);
+    
     <br>
 
     using (Ajax.BeginForm("ShowEditorArea", new AjaxOptions
@@ -24,7 +27,7 @@
     }))
     {
         <hr>
-        @Html.TextArea("Code", (string)item.PracticeUserInput, new { rows = "10", cols = "1000" })
+        @Html.TextArea("Code", info+"\n"+(string)item.PracticeUserInput, new { rows = "10", cols = "1000" })
         <br>
         <input type="submit" class="btn btn-primary" />
     }
