--- a/YourCourses/Views/AnswerChoices/Delete.cshtml
+++ b/YourCourses/Views/AnswerChoices/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model YourCourses.Models.Question
+﻿@model YourCourses.Models.AnswerChoice
 
 @{
     ViewBag.Title = "Delete";
@@ -8,31 +8,23 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Question</h4>
+    <h4>AnswerChoice</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Answers.AnswerText)
+            @Html.DisplayNameFor(model => model.Question.QuestionText)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Answers.AnswerText)
+            @Html.DisplayFor(model => model.Question.QuestionText)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Quizs.QuizId)
+            @Html.DisplayNameFor(model => model.Choices)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Quizs.QuizId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.QuestionText)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.QuestionText)
+            @Html.DisplayFor(model => model.Choices)
         </dd>
 
     </dl>
