--- a/YourCourses/Views/Shared/_Layout.cshtml
+++ b/YourCourses/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <li>@Html.ActionLink("Test Practice", "Index", "Practice")</li>
                     <li>@Html.ActionLink("Интерактивные курсы", "Index", "CoursesList")</li>
                     <li>@Html.ActionLink("Admin Page", "InfoAbout", "AdminPage")</li>
-                    <li>@Html.ActionLink("Опросы", "Index", "QuizsList")</li>
+                    <li>@Html.ActionLink("Опросы", "Index", "Home1")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
 
