--- a/YourCourses/Views/CoursesList/Index.cshtml
+++ b/YourCourses/Views/CoursesList/Index.cshtml
@@ -1,40 +1,107 @@
 ﻿@model IEnumerable<YourCourses.Models.Course>
+@{int i = 0; }
+<link rel="stylesheet" href="~/Content/bootstrap.min.css">
 
+<script src="~/Scripts/bootstrap.min.js"></script>
+<style>
+    .panel-footer {
+        background-color: white !important;
+    }
+        .panel-footer .btn:hover {
+            border: 1px solid #1c1918;
+            background-color: #fff !important;
+            color: #f4511e;
+        }
+        .panel-footer h3 {
+            font-size: 32px;
+        }
+
+        .panel-footer h4 {
+            color: #aaa;
+            font-size: 14px;
+        }
+
+        .panel-footer .btn {
+            margin: 15px 0;
+            background-color: #1c1918;
+            color: #fff;
+        }
+
+    .panel-heading {
+        color: #fff !important;
+        background-color: #939367 !important;
+        padding: 25px;
+        border-bottom: 1px solid transparent;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+    }
+    
+    </style>
+<br>
 <ul class="Courses">
     @foreach (var Course in Model)
     {
-
+        i++;
         <li>
-            <div >
-                
-                <span class="namecourse">Название курса</span>
-                <span class="Name">@Course.CourseName.ToString(); </span>
-            </div>
-            <div class="Details">
-                Описание курса <br>
-                @Html.Raw(Course.CourseInfo)
-            </div>
-            <div>
-                <span class="DateTime">
-                    Дата создания
-                    @Course.DateOfCourseCreation.ToString("D");
-                </span>
-                <span class="Actor">
-                    Создатель курса
-                    @Course.Artist.UserName
-                    
-                </span>
-
-            </div>
-            <div class="Type">
-                Тип курса
-                @Course.CourseType.Type
-            </div>
-            <p><a class="btn btn-default" >Name:@Html.ActionLink("Learn more", "Lecture", "CoursesList", new { id = Course.CourseId }, "") &raquo;</a></p>
             
-        </li>
-    }
+       <div class="row slideanim">
+            <div class="col-sm-7 col-xs-4">
+                <div class="panel panel-default text-center">
+                    <div class="panel-heading">
+                        
+                        <h1 class="glyphicon glyphicon-play logo-small"> @Course.CourseName.ToString()</h1>
+                    </div>
+                    <div class="panel-body">
 
-</ul>
+                        <p><strong>Информация о курсе: </strong> @Html.Raw(Course.CourseInfo)</p>
+                        <p><strong>Дата создания курса</strong> @Course.DateOfCourseCreation.ToString("D");</p>
+                    </div>
+
+                    <div class="panel-footer">
+
+                        <h3><strong>Создатель курса:</strong>@Course.Artist.UserName</h3>
+                        <h4><strong>Тип курса:</strong> @Course.CourseType.Type</h4>
+                        <button onclick="location.href='@Url.Action("Lecture", "CoursesList", new { Id= Course.CourseId })'" class="btn btn-lg ">Learn more &raquo;</button>
+                    </div>
+                </div>
+            </div>
+           </div>
+                
+            </li>
+
+            @*<li>
+                <div>
+
+                    <span class="namecourse">Название курса</span>
+                    <span class="Name">@Course.CourseName.ToString(); </span>
+                </div>
+                <div class="Details">
+                    Описание курса <br>
+                    @Html.Raw(Course.CourseInfo)
+                </div>
+                <div>
+                    <span class="DateTime">
+                        Дата создания
+                        @Course.DateOfCourseCreation.ToString("D");
+                    </span>
+                    <span class="Actor">
+                        Создатель курса
+                        @Course.Artist.UserName
+
+                    </span>
+
+                </div>
+                <div class="Type">
+                    Тип курса
+                    @Course.CourseType.Type
+                </div>
+                <p><a class="btn btn-default">Name:@Html.ActionLink("Learn more", "Lecture", "CoursesList", new { id = Course.CourseId }, "") &raquo;</a></p>
+
+            </li>*@
+            }
+
+    </ul>
 
 
