--- a/YourCourses/Views/Shared/_Layout.cshtml
+++ b/YourCourses/Views/Shared/_Layout.cshtml
@@ -36,9 +36,9 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        @*<footer>
             <p>&copy; @DateTime.Now.Year – приложение ASP.NET</p>
-        </footer>
+        </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
