try to create online compiler

--- a/YourCourses/Views/CoursesList/ShowLecture.cshtml
+++ b/YourCourses/Views/CoursesList/ShowLecture.cshtml
@@ -15,11 +15,11 @@
 
 <br>
 
-@Ajax.ActionLink("Показать практическую часть ", "ShowPractice", new { id = Model.SubId }, new AjaxOptions { UpdateTargetId = "results2", LoadingElementId = "loading" })
+@Ajax.ActionLink("Показать практическую часть ", "ShowPractice", new { id = Model.SubId }, new AjaxOptions { UpdateTargetId = "results2", LoadingElementId = "loading1" })
 <div role="separator" class="divider"></div>
 <div id="results2"></div>
 
-<img id="loading" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />
+<img id="loading1" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />
 
 <script>
 
