--- a/YourCourses/Views/Home/Index.cshtml
+++ b/YourCourses/Views/Home/Index.cshtml
@@ -222,8 +222,8 @@
     </nav>
 
     <div class="jumbotron text-center">
-        <h1>YourCources</h1>
-        <p>We specialize in interactive cources</p>
+        <h1>YourCourses</h1>
+        <p>We specialize in interactive courses</p>
         
     </div>
 
