--- a/YourCourses/Views/PracticesHome/Edit.cshtml
+++ b/YourCourses/Views/PracticesHome/Edit.cshtml
@@ -3,6 +3,17 @@
 @{
     ViewBag.Title = "Edit";
 }
+<style>
+    textarea {
+        resize: both;
+        overflow: auto; /* Horizontal and vertical scrollbar*/
+        overflow-y: scroll;
+        height: 300px;
+        width: 800px;
+        max-width: 1200px;
+        overflow-x: scroll;
+    }
+</style>
 
 <h2>Edit</h2>
 
