--- a/YourCourses/Views/CoursesList/ShowEditorArea.cshtml
+++ b/YourCourses/Views/CoursesList/ShowEditorArea.cshtml
@@ -1,4 +1,93 @@
-﻿
+﻿@*@model YourCourses.Models.FiddleExecuteModel
+@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+<!-- template from http://getbootstrap.com/getting-started -->
+
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 101 Test Template</title>
+
+    <!-- CSS Includes -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+
+    <style type="text/css">
+        .field-validation-error {
+            color: #ff0000;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div>
+            <h1>Write your C# code here</h1>
+
+            @using (Html.BeginForm())
+            {
+                <div class="form-group">
+                    @Html.LabelFor(m => m.CodeBlock)
+                    @Html.TextAreaFor(model => model.CodeBlock, new { @class = "form-control", rows = 20 })
+                </div>
+
+                    <button type="button" class="btn btn-success submit">Execute</button>
+            }
+
+            <br /><br />
+            <div class="alert alert-warning fade">
+                <strong><span class="alert-content"></span></strong>
+            </div>
+        </div>
+    </div>
+
+    <!-- JS includes -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+    <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+    <script src="//ajax.aspnetcdn.com/ajax/mvc/4.0/jquery.validate.unobtrusive.min.js"></script>
+
+    <script type="text/javascript">
+
+			function openAlert(txt) {
+				$('.alert-content').html(txt);
+				$('.alert').addClass('in');
+			}
+
+			function closeAlert() {
+				$('.alert').removeClass('in');
+			}
+
+			$(function(){
+
+				$('.submit').click(function(){
+			console.log('yo');
+					if($('form').valid()) {
+
+						$.ajax({
+							url: '@Url.RouteUrl(new{ action="Execute", controller="CoursesList"})',
+							data: {code: $('#CodeBlock').val()},
+								type: 'POST',
+								success: function(resp) {
+								openAlert(resp);
+						}});
+					}
+					else {
+						closeAlert();
+					}
+				});
+
+			});
+
+    </script>
+</body>
+</html>
+
 
 
 
@@ -6,6 +95,6 @@
 <div>
     @Html.TextArea("Name", (string)ViewBag.result, new { @class = "form-control", @readonly = true, rows = "5", cols = "420" })
 
-</div>
+</div>*@
 
 
