--- a/YourCourses/Views/CoursesList/SubLecturesList.cshtml
+++ b/YourCourses/Views/CoursesList/SubLecturesList.cshtml
@@ -7,9 +7,9 @@
     <br>
     <br>
     @Ajax.ActionLink(@items.SubName, "ShowLecture", new { id = items.SubId },
-    new AjaxOptions { UpdateTargetId = "results1", LoadingElementId = "loading" }, 
+    new AjaxOptions { UpdateTargetId = "results1", LoadingElementId = "loading3" }, 
     new { @style = "text-transform:capitalize;",@class = "btn btn-outline-info" })
-
+    @*<img id="loading3" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />*@
 
 }
 <br>
@@ -19,5 +19,5 @@
 
 <div id="results1"></div>
 
-    <img id="loading" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />
+    
     
