--- a/YourCourses/Views/Home/Index.cshtml
+++ b/YourCourses/Views/Home/Index.cshtml
@@ -211,10 +211,10 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#services">CAPABILITIES</a></li>
-                    <li><a href="#portfolio">PORTFOLIO</a></li>
-                    <li><a href="#pricing">PRICING</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="#services">ВОЗМОЖНОСТИ</a></li>
+                    <li><a href="#portfolio">ПРИМЕРЫ</a></li>
+                    <li><a href="#pricing">ЦЕНА</a></li>
+                    <li><a href="#contact">КОНТАКТ</a></li>
                     <li style="color:aqua">@Html.Partial("_LoginPartial")</li>
                 </ul>
             </div>
@@ -298,14 +298,14 @@
 
     <!-- Container (Portfolio Section) -->
     <div id="portfolio" class="container-fluid text-center bg-grey">
-        <h2>Portfolio</h2><br>
-        <h4>What we have created</h4>
+        <h2>Примеры</h2><br>
+        <h4>Что мы создали</h4>
         <div class="row text-center slideanim">
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="paris.jpg" alt="Paris" width="400" height="300">
-                    <p><strong>Paris</strong></p>
-                    <p>Yes, we built Paris</p>
+                    <img src="~/Content/Images/1.png" alt="Paris" width="400" height="300">
+                    <p><strong>Онлайн компилятор</strong></p>
+                    <p>Компиляция и выполнение любых консольных приложений</p>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -410,7 +410,7 @@
         <h2 class="text-center">CONTACT</h2>
         <div class="row">
             <div class="col-sm-5">
-                <p>Contact us and we'll get back to you within 24 hours.</p>
+                <p>Соединитесь с нами и мы поможем вам</p>
                 <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
                 <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
                 <p><span class="glyphicon glyphicon-envelope"></span> yuriygurin1@mail.ru</p>
